# MuseTargetingApp

./: .gitignore  CMakeLists.txt  cmake_generate_musetargeting.bat  requirements_MuseTargeting.txt
_build_/vs2019/: MuseTargeting.sln  MuseTargeting.vcxproj  MuseTargeting.vcxproj.filters  MuseTargetingUnitTests.vcxproj  MuseTargetingUnitTests.vcxproj.filters  MuseTargetingView.cpp  MuseTargetingView.h  MuseTargetingView.ui  libCore.vcxproj  libCore.vcxproj.filters
_build_/vs2019_x32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MuseTargeting.sln  MuseTargeting.vcxproj  MuseTargeting.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libCore.vcxproj  libCore.vcxproj.filters
_build_/vs2019_x32/MuseTargeting_autogen/: mocs_compilation.cpp
_build_/vs2019_x32/MuseTargeting_autogen/include_Debug/: ui_MuseTargetingView.h  ui_PseudoTGDriver.h
_build_/vs2019_x32/MuseTargeting_autogen/include_Debug/UVLADIE3JM/: moc_MuseTargetingModel.cpp  moc_MuseTargetingSettings.cpp  moc_MuseTargetingView.cpp  moc_PseudoTGDriver.cpp
apps/MuseTargeting/src/: MuseTargeting.cpp  MuseTargetingDOF.cpp  MuseTargetingDOF.h  MuseTargetingModel.cpp  MuseTargetingModel.h  MuseTargetingSettings.cpp  MuseTargetingSettings.h  MuseTargetingView.cpp  MuseTargetingView.h  MuseTargetingView.ui  PseudoTGDriver.cpp  PseudoTGDriver.h  PseudoTGDriver.ui
apps/MuseTargetingUnitTests/: cmake_generateMTUnitTests.bat
apps/MuseTargetingUnitTests/_build_/vs2019_x32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  museTargetingUnitTests.sln  museTargetingUnitTests.vcxproj  museTargetingUnitTests.vcxproj.filters
apps/MuseTargetingUnitTests/src/: CMakeLists.txt  MTDOFTests.cpp
libs/libCore/: libCore.cpp  libCore.h  libCore.rc
libs/libCore/Core/: Constants.cpp  Constants.h  CoreExceptions.cpp  CoreExceptions.h  EventUtils.h  Image.cpp  Image.h  STLTools.cpp  STLTools.h  Tools.cpp  Tools.h  sigslot.h
libs/libCore/Core/Maths/: BoundingBox.cpp  BoundingBox.h  Line.cpp  Line.h  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  Trihedron.cpp  Trihedron.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/: MuseTargetingDOF.cpp  MuseTargetingDOF.h  MuseTargetingModel.h  MuseTargetingSettings.cpp  MuseTargetingSettings.h  MuseTargetingView.h  MuseTargetingView.qrc  MuseTargetingView.ui  PseudoTGDriver.h
tests/: CMakeLists.txt  cmake_generate_eval_musetargeting.bat
tests/src/: MTSettingsTests.cpp
